--- a/kafka_backend/package.json
+++ b/kafka_backend/package.json
@@ -1,20 +1,25 @@
 {
-  "name": "kafka",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "bcrypt": "^5.0.1",
-    "jsonwebtoken": "^8.5.1",
-    "kafka-node": "^5.0.0",
-    "mongoose": "^5.12.3",
-    "passport": "^0.4.1",
-    "passport-jwt": "^4.0.0"
-  }
+    "name": "kafka",
+    "version": "1.0.0",
+    "description": "",
+    "main": "server.js",
+    "scripts": {
+        "start": "node server.js",
+        "devStart": "nodemon server.js",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "bcrypt": "^5.0.1",
+        "jsonwebtoken": "^8.5.1",
+        "kafka-node": "^5.0.0",
+        "mongoose": "^5.12.3",
+        "passport": "^0.4.1",
+        "passport-jwt": "^4.0.0"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.7"
+    }
 }
