--- a/backend/package.json
+++ b/backend/package.json
@@ -11,12 +11,14 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "aws-sdk": "^2.883.0",
         "bcrypt": "^5.0.1",
         "body-parser": "^1.19.0",
         "chai": "^4.3.4",
         "chai-http": "^4.3.0",
         "cookie-parser": "^1.4.5",
         "cors": "^2.8.5",
+        "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "express-fileupload": "^1.2.1",
         "express-session": "^1.17.1",
@@ -24,6 +26,7 @@
         "jsonwebtoken": "^8.5.1",
         "kafka-node": "^5.0.0",
         "mocha": "^8.3.2",
+        "mongoose": "^5.12.3",
         "multer": "^2.0.0-rc.2",
         "mysql": "^2.18.1",
         "nodemon": "^2.0.7",
