--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
         "localforage": "^1.9.0",
         "react": "^17.0.2",
         "react-bootstrap": "^1.5.2",
+        "react-confirm-alert": "^2.7.0",
         "react-cookie": "^4.0.3",
         "react-cookies": "^0.1.1",
         "react-dom": "^17.0.2",
